# riscv-pipeline-visualizer

./: .gitignore  CMakeLists.txt  INSTRUCTIONS.md  README.md  TIMELINE.md  imgui.ini
include/: parser.h  simulator.h  types.h  ui.h
src/: main.cpp  mian.cpp  parser.cpp  simulator.cpp  ui.cpp
